--- a/LmanWebPertama.html
+++ b/LmanWebPertama.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Personal Website</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-
     <!-- Header Section -->
-    <header>
+    <header class="header">
         <h1>Welcome Para Penilai, Silahkan Lihat-Lihat</h1>
-        <nav>
+        <nav class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="contact.html">Contact Me</a></li>
@@ -19,18 +19,18 @@
     </header>
 
     <!-- Main Content Section -->
-    <main>
-        <section>
+    <main class="main-content">
+        <section class="about-me">
             <h2>About Me</h2>
-            <img src="https://www.freepik.com/free-photo/happy-female-financial-adviser-showing-calculator_" 
+            <img src="Foto 3x4.png" 
             alt="My Picture" width="200" height="200">
-            <p>Hello! My name is Aqil. Welcome to my personal website. You can find more about me here and feel free to contact me.</p>
+            <p>Hello! My name is Aqil. Welcome to my personal website. I Am Become a Professional UIUX Designer, Come on Contact me Anyways.</p>
             <p>Visit my <a href="https://www.linkedin.com/in/mas-muhammad-aqil-salim-5226671b3?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" 
                 target="_blank">LinkedIn Profile</a>.</p>
         </section>
 
         <!-- Contact Section -->
-        <section>
+        <section class="contact-me">
             <h2>Contact Me</h2>
             <form action="/submit-form" method="POST">
                 <label for="name">Name:</label><br>
@@ -50,7 +50,7 @@
         </section>
 
         <!-- Personal Data Table -->
-        <section>
+        <section class="personal-data">
             <h2>My Details</h2>
             <table border="1">
                 <tr>
@@ -72,14 +72,14 @@
                 <tr>
                     <td>LinkedIn</td>
                     <td><a href="https://www.linkedin.com/in/mas-muhammad-aqil-salim-5226671b3?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" 
-                        target="_blank">Your LinkedIn Profile</a></td>
+                        target="_blank">My LinkedIn</a></td>
                 </tr>
             </table>
         </section>
     </main>
 
     <!-- Footer Section -->
-    <footer>
+    <footer class="footer">
         <p>©Aqil Company Khusus Pelatihan Prakerja. gaguna Juga sih, silahkan kalian COPAS.</p>
     </footer>
 
